# ProofScope

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  blueprint.txt  debug_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_subprocess.py  update_verify.py
api/: __init__.py  db.py  export.py  main.py  models.py  pdf_generator.py  security.py  verifier.py  verify_ledger.py
bindings/: proofscope_module.cpp
docs/: architecture.md  roadmap.md
engine/include/proofscope/: proof_verifier.hpp
engine/src/: proof_verifier.cpp
examples/: passing_sample.proof  policy_failure_sample.proof
schemas/: audit_report.py  audit_report.schema.json  error_codes.py
scripts/: build_engine.ps1  run_api.ps1  setup_dev.ps1  test.ps1  test_tamper_detection.py
src/: verifier.cpp
test_artifacts/: corrupt_math.proof  timeout_trigger.proof  valid_proof.proof
tests/: test_api.py  test_verifier.py
web/: package-lock.json  package.json
web/src/: App.jsx
web/src/components/: DropZone.jsx  ReportView.jsx  Sidebar.jsx
